--- a/static/style.css
+++ b/static/style.css
@@ -1,422 +1,339 @@
-/* @begin scrollbar */
-pre::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-    padding: 18px;
-    -webkit-border-radius: 3px;
-} 
-pre::-webkit-scrollbar-thumb {
-    background-color: #ccc;
-    width: 8px;
-    height: 8px;
-    padding: 18px;
-    -webkit-border-radius: 3px;
+@import url(//fonts.googleapis.com/css?family=Rosario);
+@import url(//fonts.googleapis.com/css?family=PT+Sans);
+body {
+    color: #444;
+    padding: 0;
+    margin: 0;
+    font: 16px/1.62 "Rosario", "Xin Gothic", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", Arial, sans-serif;
 }
-::selection {
-    color: #fff;
-    background: #e3513b;
-    text-shadow: 0 0 0 #fff;
-}
-/* @end scrollbar */
-
-/* @begin reset */
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td,hr,button,article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
-    margin:0;padding:0;
-}
-article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section { 
-    display:block;
-}
-pre {
-    overflow: auto;
-    font: normal normal 12px/1.3 monospace;
-    max-height: 45em;
-    padding: 8px;
-}
-code, .literal {
-    font: normal normal 12px/1.3 monospace;
-}
-input,select,textarea{
-    font-size:100%;
-}
-table{
-    margin: 1em 0;
-    border-collapse:collapse;border-spacing:0;
-    border: 1px solid #dadada;
-}
-thead{
-    background: #ccc;
-    color: #fff;
-    border: 1px solid #bbb;
-}
-th, td{
-    text-align:inherit;
-    padding: 0.2em 0.4em;
-}
-tbody tr:nth-child(2n) {
-    background: #eee;
-}
-fieldset,img,a img{
-    border:0;
-    outline: 0 none;
-}
-iframe{
-    display:block;
-}
-abbr,acronym{
-    border:0;font-variant:normal;
-}
-del {
-    text-decoration:line-through;
-}
-address,caption,code,dfn,th,var {
-    font-style:normal;
-    font-weight:500;
-}
-ol,ul {
-    list-style:none;
-}
-caption,th {
-    text-align:left;
-}
-h2,h3,h4,h5,h6 {
-    font-size: 100%;
-    font-weight: bold;
-    font-family: Helvetica,arial,sans-serif;
+h1, h2, h3, h4, h5, strong {
+    font-family: "PT Sans", "Xin Gothic", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", Arial, sans-serif;
 }
 h1 {
-    font-size: 1.6em;
-    font-family: Georgia, "Times New Roman", "STHeiti", "Microsoft YaHei", "WenQuanYi Micro Hei", serif;
+    margin-top: 0;
+    font-size: 28px;
 }
 h2 {
-    font-size: 1.4em;
+    font-size: 22px;
+    margin: 45px 0 15px;
 }
 h3 {
-    font-size: 1.2em;
+    font-size: 18px;
+    margin: 30px 0 10px;
 }
-q:before, q:after {
-    content:'';
+
+/* block level */
+blockquote {
+    border-left: 0.4em solid #ddd;
+    margin: 15px 0;
+    padding: 0 15px;
+    color: #777;
 }
-sup {
-    vertical-align:text-top;
-}
-sub {
-    vertical-align:text-bottom;
+blockquote blockquote {
+    padding: 0 0 0 1em;
+    margin-left: 2em;
+    border-left: 0.4em solid #ddd;
 }
 p {
-    margin-bottom: 0.4em;
+    font-weight: normal;
+    line-height: 1.8;
+    margin: 20px 0;
 }
-a {
-    overflow: hidden;
-    word-wrap: break-word;
+figure {margin:0; padding:0;}
+
+hr {
+    border-top: 1px solid #dadada;
+    border-bottom: 1px solid #dadada;
 }
-a:active {
-    outline: 0 none;
+
+ul, ol {
+    margin: 14px 0;
+    padding-left: 30px;
 }
-ins,a {
-    text-decoration:none;
+ul {
+    list-style: square;
 }
-blockquote {
-    padding: 8px 24px 1px;
+li ul {
+    list-style: disc;
     margin: 8px 0;
 }
-blockquote::before {
-    float: left;
-    content: '“';
-    font-size: 34px;
-    font-weight: bold;
-    color: #bababa;
-    font-style: italic;
-    line-height: 24px;
-    margin: 0 0 0 -24px;
-    font-family: Georgia, serif;
-}
-blockquote::after {
-    display: block;
-    width: 98%;
-    text-align: right;
-    content:'”';
-    clear:both;
-    font-size: 34px;
-    font-weight: bold;
-    color: #bababa;
-    font-style: italic;
-    line-height: 0;
-    margin: 0 0 12px 10px;
-    font-family: Georgia, serif;
-}
-/* @end reset */
-/* @begin function class */
-.fn-clear:after {
-    visibility:hidden;
-    display:block;
-    font-size:0;
-    content:" ";
-    clear:both;
-    height:0;
-}
-.fn-clear {
-    zoom:1; /* for IE6 IE7 */
-}
-.fn-left,.fn-right {
-    display:inline;
-}
-.fn-left {
-    float:left;
-}
-.fn-right {
-    float:right;
-}
-.fn-center{
-    margin:0 auto;
-    position:relative;
-    max-width: 960px;
-}
-.fn-text-wrap {
-    overflow: hidden;
-    word-wrap: break-word;
-}
-.fn-hide {
-    display:none;
-}
-.ft-left {
-    text-align: left;
-}
-.ft-right {
-    text-align: right;
-}
-.ft-center {
-    text-align: center;
-}
-/* @end function class */
 
-/* @begin layout */
-html, body {
-    color: #080000;
-    background: #fdfdfa;
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    border-color: #bbb;
 }
-h1, h2, h3, h4, strong {
-    color: #000;
+table tr:nth-child(2n) {
+    background: #eee;
+}
+table th, table td {
+    text-align: left;
+    padding: 4px 6px;
+}
+/* span level */
+img {
+    max-width: 100%;
 }
 a {
-    color: #9c0001;
+    color: #000;
+    text-decoration: none;
+    overflow: hidden;
+    word-wrap: break-word;
+    border-bottom: 1px dotted #ddd;
+    border-bottom: 1px dotted rgba(0,0,0,0.2);
 }
 a:hover {
-    color: #cd0001;
+    color: #d14;
+    cursor: pointer;
+    -webkit-transition: color .5s ease;
+    -moz-transition: color .5s ease;
+    transition: color .5s ease;
 }
-#wrapper {
-    paddding: 0 10px;
+a img {
+    vertical-align: middle;
 }
-/** header **/
-#header {
-    background: url('bg_header.png') repeat-x #fff;
-    border-bottom: 1px solid #dadada;
-    box-shadow: 0 1px 0 #f0f0f0;
-    text-transform: uppercase;
-    margin-bottom: 1em;
+strong {
+    color: #424242;
 }
-#nav {
-    font-family: Georgia, "Times New Roman", serif;
-}
-#nav li {
-    float: left;
-    height: 2.4em;
-}
-#nav a {
-    display: inline-block;
-    border-top: 3px solid #7d7d7c;
-    padding: 0 0.6em;
-    line-height: 2.4em;
-    color: #707065;
-    text-decoration: none;
-}
-#nav .current a {
-    color: #9c0001;
-}
-#nav a:hover {
-    border-color: #222;
-    color: #222;
-}
-#header nav, .hentry {
-    max-width: 650px;
-    *width: 650px;
-    margin: 0 auto;
-    text-align: left;
-}
-#header nav {
-    overflow: hidden;
-    height: 2.4em;
-}
-.hentry {padding: 0 10px;}
-@media only screen and (max-device-width: 480px) {
-    #header nav { height: 36px; }
-    #nav a { font-size: 13px; line-height: 36px; }
-    #nav li { height: 36px; }
-    #search-form { display: none; border: 0 none; }
-}
-/** end header **/
-/** footer **/
-#footer {
-    padding: 1.8em 0 1em;
-    font-size: 0.8em;
-    font-family: Georgia, "Times New Roman", serif;
-    max-width: 650px;
-    *width: 650px;
-    margin: 0 auto;
-    text-align: right;
-    color: #969696;
-}
-#footer .love , #footer .love a { color: #ddd; }
-/** end footer **/
-/** search **/
-#search-form {
-    float: right;
-    padding-right: 1.1em;
-}
-#search-input {
-    outline: 0 none;
-    color: #666;
-    background: #fdfdf9;
-    padding: 0.2em 0 0.2em 0.5em;
-    max-width: 120px;
-    border: 1px solid #ddd;
-    border-radius: 1em;
-    text-shadow: 0 1px 0 #fff;
-    box-shadow: 0 1px 0 #fff, inset 0 1px 0 #efefef;
-}
-#search-input:focus {
-    background: #fefdf9;
-}
-/** end search **/
-/* @end layout */
 
-/* @begin entry */
-.entry-header {
-    padding: .3em 0 1.2em;
+/* code */
+pre, code, tt {
+    font: 14px "Menlo", monospace;
 }
-.entry-meta {
-    font-style: italic;
-    font-family: Georgia, "Times New Roman", serif;
-    border-top: 3px double #d0d0d0;
-    border-bottom: 3px double #d0d0d0;
-    margin: 1em 0 2em;
-}
-.entry-meta a {
-    font-style: normal;
-}
-.entry-meta p {
-    margin: 6px 0;
-}
-.entry-time {
-    padding-right: 6px;
-    border-right: 1px dashed #d0d0d0;
-}
-.entry-tags {
-    padding-left: 6px;
-    border-left: 1px dashed #fff;
-}
-.entry-tags a {
-    margin-right: 0.4em;
-}
-.entry-tags a::before {
-    content: "#";
-}
-.entry-rel a {
-    color: #999;
-    font-size: 0.9em;
-    margin-left: 0.6em;
-}
-.entry-rel a:hover {
-    color: #565656;
-}
-.entry-content {
-    line-height: 1.55em;
-    font-family: Georgia, "Times New Roman", "STHeiti", "Microsoft YaHei", "WenQuanYi Micro Hei", serif;
-}
-.entry-content .section {
-    padding: 9px 0;
-}
-.entry-content .section .section {
-    padding: 0 0 9px;
-}
-.entry-content h3 {
-    font-size: 14px;
-}
-.entry-content p {
+pre {
     margin: 1em 0;
+    background-color: #fbfbfb;
+    border: 1px solid #ddd;
+    padding: 8px;
+    line-height: 1.5em;
+    color: #444;
+    overflow: auto;
+    box-shadow: rgba(0,0,0,0.07) 0 1px 2px inset;
+    border-radius: 3px;
 }
-.entry-content ul {
-    list-style-type: square;
-    margin: 6px 0 6px 18px;
+code, tt {
+    background-color: #fee9cc;
+    color: rgba(0, 0, 0, 0.75);
+    padding: 1px 3px;
+    font-size: 12px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
 }
-.entry-content ol {
-    list-style-type: decimal;
-    margin: 6px 0 6px 18px;
+pre code {
+    padding: 0;
+    color: #444;
+    border: none;
+    background: inherit;
 }
-.entry-content img {
-    max-width: 90%;
-    border-radius: 6px;
-    box-shadow: 1px 1px 3px #aeaeae;
-}
-.highlight {
-    border: 1px dashed #ddd;
-    padding: 1px 5px 3px 1px;
-}
-.page-content ul {
-    list-style-type: none;
-    margin: 0;
-}
-/* @end entry */
 
-/* @begin entry-list */
-#entry-list {
-    font-family: Georgia, "Times New Roman", "STHeiti", "Microsoft YaHei", "WenQuanYi Micro Hei", serif;
+/* form */
+textarea, input {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 14px;
+    padding: 5px 8px;
 }
-#entry-list li{
-    position: relative;
-    padding: 6px 0;
-    border-bottom: 1px solid #dadada;
-    border-top: 1px solid #ffffff;
-    box-shadow: 0 1px 0 #ffffff;
+textarea:focus, input:focus {
+    border-color: #999;
+    outline: 0 none;
 }
-#entry-list li:first-child {
-    border-top: 0 none;
-}
-#entry-list h3 {
-    padding-bottom: 0.5em;
-}
-#entry-list li:hover time {
+
+/* extra */
+hr.end {
     display: block;
+    margin: 30px 0;
+    clear: both;
+    border: 0 none;
+    height: 10px;
+    text-align: center;
+    background: url("end.png") no-repeat 50% 50%;
 }
-#entry-list time {
-    display: none;
+
+::selection {
+    background: rgba(240,17,68,0.8);
+    color: #fff;
+}
+.container {
+    max-width: 560px;
+    *width: 560px;
+    margin: 0 auto;
+    padding: 20px;
+}
+#header {
+    position: relative;
+    background: #f4f4f4;
+    box-shadow: 0 0 5px #ccc;
+    height: 46px;
+    width: 100%;
+    zoom: 1;
+}
+#header:after {
+    display: block;
+    content: " ";
+    clear: both;
+    visibility: hidden;
+    height: 0;
+    font-size: 0;
+}
+#brand {
     position: absolute;
     top: 0;
-    left: -6.1em;
-    background: #969696;
-    background: rgba(0,0,0,0.24);
-    color: #fff;
-    border-radius: 0.3em;
-    font-size: 0.8em;
-    padding: 0.6em 0.8em;
+    left: 20px;
+    margin: 0;
+    font-size: 26px;
 }
-#entry-list time .year {
-    display: block;
-    font-size: 1.5em;
-    padding-bottom: 0.1em;
-    color: #fff;
+#brand a {
+    color: #dddfdf;
+    color: rgba(0,0,0,0.1);
+    border-bottom: 0 none;
+}
+#brand a:hover {
+    color: #dadada;
+    color: rgba(0,0,0,0.16);
+}
+#nav {
+    position: relative;
+    max-width: 560px;
+    *width: 560px;
+    height: 46px;
+    margin: 0 auto;
+    background: #f4f4f4;
+    z-index: 9;
+}
+#nav a {
+    font-weight: bold;
+    font-family: "Helvetica Neue", "Helvetica", arial, sans-serif;
+    margin-right: 6px;
+    padding: 8px 10px;
+    line-height: 46px;
+    border-bottom: 0 none;
+}
+#nav a:hover {
+    color: #d00;
+    border-top: 6px solid #d14;
+    margin-top: -6px;
+}
+#nav select {
+    margin-top: 8px;
+    font-size: 16px;
+}
+@media (max-width: 480px) {
+    #brand a {
+        color: rgba(0,0,0,0.8);
+    }
+    #nav {
+        position: absolute;
+        top: 0;
+        right: 10px;
+    }
+}
+#main {
+    clear: both;
+}
+#footer {
+    text-align: center;
+    padding: 20px;
+    max-width: 560px;
+    *width: 560px;
+    margin: 0 auto 30px;
+    text-align: left;
+}
+#footer a {
+    margin: 0;
+}
+#footer .elsewhere {
+    text-align: center;
+    margin-bottom: 40px;
+}
+#footer .elsewhere a {
+    margin: 0 10px;
+}
+#footer .copyright, #footer .system-info {
+    margin: 0;
+    color: #ccc;
+    font-size: 12px;
+}
+#footer .copyright a {
+    color: #bbb;
+}
+#footer .copyright a:hover {
+    color: #d14;
+}
+/* article */
+.hentry {
+    overflow: hidden;
+    font-family: 'Rosario', 'Xin Gothic', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', Arial, sans-serif;
+}
+.entry-title, .hentry h2, .hentry h3, .hentry h4 {
+    color: #222;
+}
+.entry-meta, .entry-meta a, .updated, .updated a , .entry-review {
+    color: #999;
+    font-size: 14px;
+}
+.entry-meta a:hover, .updated a:hover {
+    color: #d14;
+}
+.entry-tags {
+    margin: 20px 0;
+}
+.entry-tags a {
+    margin-right: 10px;
+}
+.entry-tags a:before {
+    content: "#";
+}
+.entry-tags a:hover {
+    color: #d14;
+}
+.entry-list {
+    list-style-type: none;
+    margin-left: 0;
+    padding-left: 0;
+}
+.entry-item {
+    margin: 12px 0;
+    zoom: 1;
+}
+.entry-item a {
+    margin: 0.2em 1em;
+}
+.entry-item-title {
+    margin-top: 24px;
+}
+.entry-item-title a {
+    margin-left: 0;
+}
+.pagination {
+    position: relative;
+    margin-top: 40px;
+    text-align: center;
+    text-transform: uppercase;
+    font: normal 12px "Helvetica", arial, sans-serif;
+    color: #9f9f99;
+}
+.pagination .prev {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.pagination .next {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+.tagcloud a {
+    display: inline-block;
+    margin: .2em .4em;
+    opacity: 0.6;
+}
+.tagcloud a:hover {
+    opacity: 1;
+}
+.tagcloud .count {
+    font-size: 12px;
 }
 #disqus_thread {
-    text-shadow: 0 0 0 #fff;
-}
-#pagination {
-    text-align: center;
-    padding: 24px 0 10px;
-    color: #bcbcbd;
-}
-#pagination span, #pagination a {
-    padding: 3px 9px;
-}
-.tagcloud li {
-    display: inline;
-    padding: 3px 5px;
+    margin-top: 50px;
 }
