--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
-@import url(//fonts.googleapis.com/css?family=Rosario);
-@import url(//fonts.googleapis.com/css?family=PT+Sans);
+/* @import url(//fonts.googleapis.com/css?family=Rosario); */
+/* @import url(//fonts.googleapis.com/css?family=PT+Sans); */
 body {
     color: #444;
     padding: 0;
